<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_fav"
        android:title="@string/favourite"
        android:icon="@drawable/ic_heart_full"
        app:showAsAction="always"/>
</menu>