...
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:contentDescription="@string/poster" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/pb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:progressDrawable="@drawable/pb_drawable"
            android:max="100"
            android:background="@drawable/shape_circle"
...
